<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.kinopoisk.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_latter"
        android:name="com.example.kinopoisk.ui.watch_latter.GalleryFragment"
        android:label="@string/menu_watch_latter"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_favorites"
        android:name="com.example.kinopoisk.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_favorites"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_genres"
        android:name="com.example.kinopoisk.ui.tools.ToolsFragment"
        android:label="@string/menu_genres"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.kinopoisk.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.kinopoisk.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>