<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_latter"
            android:icon="@drawable/ic_watch_latter"
            android:title="@string/menu_watch_latter" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/nav_genres"
            android:icon="@drawable/ic_genres"
            android:title="@string/menu_genres" />
    </group>



</menu>
